--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="logo">About</a>
+        <a href="/" class="logo">About Me</a>
         <a href="cv.pdf" class="download">Download PT</a>
         <div class="cover"></div>
 
